k8s/tools/jackett/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: ghcr.io/hotio/jackett
          ports:
            - name: http
              containerPort: 9117
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: shared/jackett
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config-pvc
